# project-lvl1-s566

./: .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc_game.py  brain_even_game.py  brain_gcd_game.py  brain_prime_games.py  brain_progression.py  brain_progression_game.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
